# Semantic_Object_Mapping

./: .gitattributes  LICENSE  README.md
detection/nn_tflite/: CMakeLists.txt  README.md  package.xml
detection/nn_tflite/config/: detection_model.yaml  detection_model_doorway.yaml  ros.yaml  ros_all_in_one.yaml  ros_front.yaml  ros_left.yaml  ros_rear.yaml  ros_right.yaml  ros_up.yaml  thermal.yaml
detection/nn_tflite/include/: model_utils.h
detection/nn_tflite/include/edgetpu_detection/: edgetpu_detector.h
detection/nn_tflite/launch/: edgetpu_detection.launch  edgetpu_detection_doorway.launch  edgetpu_detection_multiple_rs.launch
detection/nn_tflite/libedgetpu/: edgetpu.h  edgetpu_c.h
detection/nn_tflite/network_config/classes/: Doorway_labels.txt  subt_labels.txt
detection/nn_tflite/network_config/tflite/: mobiledet_subt.tflite
detection/nn_tflite/src/: edgetpu_detection_node.cpp  edgetpu_detector.cpp  model_utils.cpp
detection/nn_trt/yolov5_trt/trt_ros/: .gitattributes  CMakeLists.txt  package.xml
localization/: CMakeLists.txt  package.xml
localization/cfg/: artifact_dimensions.yaml  artifact_localization.yaml  camera_topics.yaml  co2_detection.yaml  husky2_camera_specs.yaml  msl_raptor_params.yaml  single_yolo_art_loc_test.yaml  spot1_camera_specs.yaml  topic_switch.yaml
localization/include/artifact_localization/: UKF.h  artifact.h  batch_optimizer.h  camera.h  config.h  gas_strength_processor.h  kalman.h  localizer.h  msl_raptor_backend.h  msl_raptor_wrapper.h  observation.h  signal_processor.h
localization/launch/: artifact_localization.launch  artifact_localization_queue_redo.launch  dummy_rgb_depth_det.launch  republish_thumbnail.launch  topic_repeater.launch
localization/scripts/: artifact_visualizer.py  beckley_at.yaml  dummy_rgb_depth_det.py  parking_lot_trim.py  parking_lot_trim_by_label.py  read_total_station.py  republish_thumbnail.py  subdivide_image.py  topic_repeater.py  topic_switch.py  topic_switcher.py
localization/src/: artifact.cpp  artifact_localization_node.cpp  batch_optimizer.cpp  camera.cpp  config.cpp  gas_strength_processor.cpp  kalman.cpp  localizer.cpp  msl_raptor_wrapper.cpp  observation.cpp  signal_processor.cpp
localization/test/: camera_info.bagy  debug_thermal.rviz  publish_dummy_artifact_detection.launch  publish_dummy_artifact_detection.py  rerun_artifact.launch  rerun_artifact.rviz  rerun_artifact.sh  rerun_artifact_base.launch  rerun_artifact_detect.launch  rerun_artifact_detect.sh  rerun_artifact_detect_base.launch  rerun_artifact_detect_thermal_base.launch  rerun_artifact_detect_yolov5_base.launch  rerun_artifact_drone.sh  rerun_artifact_drone1.rviz  rerun_artifact_husky1.rviz  rerun_artifact_husky2.rviz  rerun_artifact_husky3.rviz  rerun_artifact_husky4.rviz  rerun_artifact_localization_and_base.launch  rerun_artifact_spot1.rviz  rerun_artifact_spot2.rviz  rerun_artifact_spot2_yolov5.rviz  rerun_artifact_spot3.rviz  rerun_artifact_spot4.rviz  test_artifact.cpp  test_artifact.test  test_artifact_localization_common.cpp  test_artifact_localization_old.cpp  test_artifact_localization_pipeline.cpp  test_artifact_localization_pipeline.test  test_artifact_localization_unit_1.cpp  test_artifact_localization_unit_1.test  test_artifact_localization_unit_2.cpp  test_artifact_localization_unit_2.test  test_batch_optimizer.cpp  test_batch_optimizer.test
reconciliation/: CMakeLists.txt  README.md  package.xml
reconciliation/cfg/: artifact_reconciliation.yaml  dummy_artifact_global.yaml
reconciliation/include/artifact_reconciliation/: artifact_reconciliation.h
reconciliation/launch/: artifact_reconciliation.launch
reconciliation/scripts/: fake_artifact_global_publisher.py  fake_redetect_service.py  get_netvlad_desc_server.py
reconciliation/scripts/netvlad/: load_saved_model.py  netvlad.py
reconciliation/src/: artifact_reconciliation.cpp  artifact_reconciliation_node.cpp
reconciliation/test/: test_artifact_reconciliation.cpp  test_artifact_reconciliation.test
utils/artifact_darpa_server_surrogate/: .gitlab-ci.yml  CMakeLists.txt  README.md  gt.json  package.xml  setup.py
utils/artifact_darpa_server_surrogate/cfg/: artifact_reporting_utils.yaml
utils/artifact_darpa_server_surrogate/datasets/: artifact_dataset_1.json  artifact_dataset_operation_hackathon_1.json  artifact_dataset_tunnel2_blocked.json  beckley_18JUL.json  dataset_run_b301_190530.json  msha_1.json
utils/artifact_darpa_server_surrogate/datasets/198/: artifact_placement.yaml  gt.json  gt_w_transformation.yaml  original_surveyed_gt.yaml
utils/artifact_darpa_server_surrogate/datasets/301/: artifact_placement.yaml  gt.json  original_surveyed_gt.yaml
utils/artifact_darpa_server_surrogate/datasets/82/: artifact_placement.yaml  gt.json  original_surveyed_gt.yaml
utils/artifact_darpa_server_surrogate/datasets/arroyo/: arroyo_gt.yaml  artifact_placement.yaml  gt.json  input.yaml  original_surveyed_gt.yaml
utils/artifact_darpa_server_surrogate/datasets/eagle1/: artifact_placement.yaml  gt.json  original_surveyed_gt.yaml
utils/artifact_darpa_server_surrogate/datasets/ehs/: artifact_placement.yaml  gt.json  (+3 more)
utils/artifact_darpa_server_surrogate/launch/: server.launch
utils/artifact_darpa_server_surrogate/scripts/: artifact_reporting_utils.py  generate_gt_file_from_gazebo.py  server.py
utils/artifact_darpa_server_surrogate/tests/: dataset.json  test_scoring.py  test_scoring.test
utils/artifact_detection_rf/: CMakeLists.txt  package.xml
utils/artifact_detection_rf/cfg/: artifact_detection_rf.yaml
utils/artifact_detection_rf/launch/: artifact_detection_rf.launch  key_value.launch  visualize_co2_markers.launch  visualize_rssi_markers.launch
utils/artifact_detection_rf/scripts/: prepare_interface.sh
utils/artifact_detection_rf/src/: append_key.py  artifact_detection_rf.py  bt_scanner.py  bt_scanner_origin.py  channel_selector.py  detector_wifi.py  prepare_interface.py  tshark.py  wifi_scanner.py
utils/artifact_detection_rf/utils/: parse_bag.py  pose_graph_tools.py  visualize_co2_markers.py  visualize_rssi_markers.py
(+63 files in other folders)
