<?xml version="1.0"?>
<package format="2">
  <name>artifact_detection_nn_tflite</name>
  <version>0.0.0</version>
  <description>The artifact_detection_nn_tflite package</description>

  <maintainer email="benjaminramtoula@gmail.com">Benjamin Ramtoula</maintainer>

  <license>TODO</license>


  <depend>darknet_ros_msgs</depend>
  <depend>artifact_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
