<?xml version="1.0"?>
<package format="2">
  <name>darpa_server_surrogate</name>
  <version>0.0.0</version>
  <description>The darpa_server_surrogate package</description>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <test_depend>rostest</test_depend>

</package>
