<?xml version="1.0"?>
<package format="2">
  <name>trt_ros</name>
  <version>0.1.0</version>
  <description>The YOLOv5 trt ROS wrapper package</description>

  <maintainer email="xlei@jpl.nasa.gov">Xianmei Lei</maintainer>

  <license>subt</license>

  <depend>darknet_ros_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
